2001-04-26  Braden McDaniel <braden@endoframe.com>

        * Added Doxygen comments for VrmlNodeChild.

2001-04-25  Braden McDaniel <braden@endoframe.com>

        * Applied patch from Joerg Scheurich
          <rusmufti@helpdesk.rus.uni-stuttgart.de> to accommodate
          higher-resolution textures in the Background node.

2001-04-24  Braden McDaniel <braden@endoframe.com>

        * Consolidated VRML97 node types in a single header and a single
          implementation file.

2001-04-23  Braden McDaniel <braden@endoframe.com>

        * Consolidated SF* and MF* types into a single header, `field.h'.

2001-04-12  Thomas Flynn <tflynn@users.sourceforge.net>
        * Checked in fixes for bugs 210011, 211349 and 407708.
          Updated conformance testing results.

2001-02-16  Braden McDaniel  <braden@endoframe.com>

        * Moved texture reading code to `Image.cpp'. This obsoletes the
          files:
            gifread.h
            gifread.cpp
            pngread.h
            pngread.cpp
            jpgread.h
            jpgread.cpp
            mpgread.h
            mpgread.cpp

2001-02-14  Braden McDaniel  <braden@endoframe.com>

        * Changed VrmlNode::eventIn() to take a reference to a VrmlField
          rather than a pointer.

2001-02-06  Braden McDaniel  <braden@endoframe.com>

        * Fixed VrmlNodeGroup::removeChildren() to account for nulls in
          the MFNode array.

        * Fixed VrmlNodeGroup::recalcBSphere() to account for nulls in
          the MFNode array.

        * Changed VrmlMFNode::addNode() and ::removeNode() to take
          VrmlNode references (rather than pointers).

        * Changed VrmlNodeType::addNode() to take a VrmlNode reference
          (rather than a pointer).

        * In `VrmlNamespace.cpp', moved definitions of NodeCloneVisitor
          and NodeRouteCopyVisitor from inside the cloneNodes() method
          to an unnamed namespace at global scope. This fixes a weird