@@ -1,6 +1,7 @@
 2001-04-26  Braden McDaniel <braden@endoframe.com>
 
         * Added Doxygen comments for VrmlNodeChild.
+        * Added Doxygen comments for VrmlNodeGeometry.
 
 2001-04-25  Braden McDaniel <braden@endoframe.com>
 
